# TeleGram-Scraper

./: README.md  add2group.py  config.data  members.csv  pyproject.toml  scraperAll.py
General/: AI Marketing Outreach Masters.csv  Alphadex Official.csv  ArrowMarkets.csv  Autofarm.network Community.csv  Ayoken.csv  BSC MemePad.csv  Blizz Finance.csv  Blockchain Developers.csv  Bluca Official Community.csv  Chain 🎮 Games.csv  Chamillion Official.csv  Coinweb.io.csv  DAOLaunch Community.csv  Debond Protocol.csv  DebondProtocol.csv  Doge Run P2E - Presale LIVE!.csv  Dopamine (Community).csv  Dottery.csv  Elonagotchi Official.csv  Equilibrium.csv  FANFURY :: Official Channel.csv  FEASTchat.csv  FandomChain.csv  FandomChain_KDC_Official.csv  Fanfury.csv  FantomStarter Chat.csv  FarmingBad.csv  FarmlanGlobal.csv  Farmland Global.csv  FastMoonFinance.csv  FatDoge - $FOGE 🚀🌑🐕.csv  Fawkes Mask.csv  Fawkes Mask中文社区 BSC Binance.csv  FeastChat.csv  Feastchat.csv  Fedora Gold (FED) Official Channel.csv  FootballGo Community.csv  Gensokishi Online -META WORLD- Main Chat Group.csv  Good Games Guild.csv  H-educate Official Group.csv  (+33 more)
Lottery Competitors/: bitoshiBSC.csv  blackpokerglobal.csv  freeCryptoLotto.csv  g2_gaming.csv  yieldly.csv  ♣️ BLACK POKER 🇺🇸♥️.csv
