[tool.poetry]
name = "repl_python3_TeleGram-Scraper"
version = "0.1.0"
description = ""
authors = ["AlessandroEren <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.5"
Telethon = "^1.24.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
